# quinn_q

./: .gitignore  README.md  pyproject.toml
backend/: Dockerfile  README.md  pyproject.toml  requirements.txt  server.py
backend/gemini/: __init__.py  agent.py  request.py
frontend/: Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  index.css
gemini/: agent.py  request.py
gemini/prompts/: system.md
infrastructure/rancher/: README.md
infrastructure/rancher/k8s/: backend-deployment.yaml  backend-service.yaml  frontend-deployment.yaml  frontend-service.yaml  ingress.yaml  namespace.yaml  secret-sample.yaml
